{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 24,
  "lineage": "00a4af20-8d5a-6cf8-3100-219c69e074c7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.329-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-backend",
            "log_config": [],
            "name": "allow-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-backend",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "frontend"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.408-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.355-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.366-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-jenkins",
            "log_config": [],
            "name": "allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.200-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-mysql",
            "log_config": [],
            "name": "allow-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-mysql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_port_4040",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4040"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T08:21:57.874-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-port-4040",
            "log_config": [],
            "name": "allow-port-4040",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-port-4040",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-06T05:56:23.275-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-interns/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "priority": 1000,
            "project": "devops-interns",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240815",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/furkan-backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/furkan-backend",
            "instance_id": "4977501438528144104",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "furkan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8NgpjErPDE1277dLwkT5wfsrwhn86pe9FApIYzLyKMsjl0KAeaIysCr0qRpI6IWv6QlAhE2hbL5Wkb5swEpWK6p/uqfKqO5zmWeptYTb/33BW8oR1nciWVKKrUhv/Tp5nGckh40BfYbFjZQ2zQigpjdBiJ8t3gglmd6yBQbNdM59rpodK/iUlPPnhao6uesBvRcjnLAXE3VGlbgNX+S2DFchKy4pFPOhJQJSu8iD0si8lcBv1AeRUVmQpFhKh1FCVIG9LdurW1lXrUw9P9URb2pr0x0gIlsKDUIjCNeIEBaz+zsRSEjWYJDnlx0oDUamHXXtdpgPpJEN3oP0ABYEwPxOQhqkVyPYefy82AxGvQcwmgSEfHuZvspFeaSiTOAhq5DK3F29oUm8tC50RNfD01mGCmsA7XcVDIFglkhhnwt [...]
            },
            "metadata_fingerprint": "Xb18WURlLHY=",
            "name": "furkan-backend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.44.6.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/furkan-backend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.furkan_vpc",
            "google_compute_subnetwork.furkan_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240815",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/furkan-frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/furkan-frontend",
            "instance_id": "4770575016628011752",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "furkan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8NgpjErPDE1277dLwkT5wfsrwhn86pe9FApIYzLyKMsjl0KAeaIysCr0qRpI6IWv6QlAhE2hbL5Wkb5swEpWK6p/uqfKqO5zmWeptYTb/33BW8oR1nciWVKKrUhv/Tp5nGckh40BfYbFjZQ2zQigpjdBiJ8t3gglmd6yBQbNdM59rpodK/iUlPPnhao6uesBvRcjnLAXE3VGlbgNX+S2DFchKy4pFPOhJQJSu8iD0si8lcBv1AeRUVmQpFhKh1FCVIG9LdurW1lXrUw9P9URb2pr0x0gIlsKDUIjCNeIEBaz+zsRSEjWYJDnlx0oDUamHXXtdpgPpJEN3oP0ABYEwPxOQhqkVyPYefy82AxGvQcwmgSEfHuZvspFeaSiTOAhq5DK3F29oUm8tC50RNfD01mGCmsA7XcVDIFglkhhnwt [...]
            },
            "metadata_fingerprint": "Xb18WURlLHY=",
            "name": "furkan-frontend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.148.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/furkan-frontend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "frontend"
            ],
            "tags_fingerprint": "4s55Dl-6pHw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.furkan_vpc",
            "google_compute_subnetwork.furkan_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240815",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/furkan-jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/furkan-jenkins",
            "instance_id": "8895614598736462569",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "jenkins-port": "8080",
              "ssh-keys": "furkan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8NgpjErPDE1277dLwkT5wfsrwhn86pe9FApIYzLyKMsjl0KAeaIysCr0qRpI6IWv6QlAhE2hbL5Wkb5swEpWK6p/uqfKqO5zmWeptYTb/33BW8oR1nciWVKKrUhv/Tp5nGckh40BfYbFjZQ2zQigpjdBiJ8t3gglmd6yBQbNdM59rpodK/iUlPPnhao6uesBvRcjnLAXE3VGlbgNX+S2DFchKy4pFPOhJQJSu8iD0si8lcBv1AeRUVmQpFhKh1FCVIG9LdurW1lXrUw9P9URb2pr0x0gIlsKDUIjCNeIEBaz+zsRSEjWYJDnlx0oDUamHXXtdpgPpJEN3oP0ABYEwPxOQhqkVyPYefy82AxGvQcwmgSEfHuZvspFeaSiTOAhq5DK3F29oUm8tC50RNfD01mGCmsA7XcVDIFglkhhnwt [...]
            },
            "metadata_fingerprint": "xdLqLgUAnKo=",
            "name": "furkan-jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.64.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/furkan-jenkins",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins"
            ],
            "tags_fingerprint": "4l7--0t2PzY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.furkan_vpc",
            "google_compute_subnetwork.furkan_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mysql_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240815",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/disks/furkan-mysql"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/devops-interns/zones/us-central1-a/instances/furkan-mysql",
            "instance_id": "4984554225799742186",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "furkan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8NgpjErPDE1277dLwkT5wfsrwhn86pe9FApIYzLyKMsjl0KAeaIysCr0qRpI6IWv6QlAhE2hbL5Wkb5swEpWK6p/uqfKqO5zmWeptYTb/33BW8oR1nciWVKKrUhv/Tp5nGckh40BfYbFjZQ2zQigpjdBiJ8t3gglmd6yBQbNdM59rpodK/iUlPPnhao6uesBvRcjnLAXE3VGlbgNX+S2DFchKy4pFPOhJQJSu8iD0si8lcBv1AeRUVmQpFhKh1FCVIG9LdurW1lXrUw9P9URb2pr0x0gIlsKDUIjCNeIEBaz+zsRSEjWYJDnlx0oDUamHXXtdpgPpJEN3oP0ABYEwPxOQhqkVyPYefy82AxGvQcwmgSEfHuZvspFeaSiTOAhq5DK3F29oUm8tC50RNfD01mGCmsA7XcVDIFglkhhnwt [...]
            },
            "metadata_fingerprint": "Xb18WURlLHY=",
            "name": "furkan-mysql",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.31.246.0",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
                "subnetwork_project": "devops-interns"
              }
            ],
            "project": "devops-interns",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/zones/us-central1-a/instances/furkan-mysql",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mysql"
            ],
            "tags_fingerprint": "jBHG6eL24Lk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.furkan_vpc",
            "google_compute_subnetwork.furkan_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "furkan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-interns/global/networks/furkan-vpc",
            "mtu": 0,
            "name": "furkan-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1142543294756504836",
            "project": "devops-interns",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "furkan_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-06T05:56:23.606-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "furkan-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-interns/global/networks/furkan-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-interns",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-interns/regions/us-central1/subnetworks/furkan-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.furkan_vpc"
          ]
        }
      ]
    }
  ]
}